--- a/vignettes/utils.Rmd
+++ b/vignettes/utils.Rmd
@@ -1,4 +1,4 @@
-# `shrt`: General purpose functions
+# `shrt`: General-purpose functions
 
 This vignette demonstrates functions in the `utils` range.
 
@@ -64,6 +64,64 @@ Note how the number of columns is automatically determined by the specified name
 
 
 &nbsp;
+## namesF, namesNA, namesT, namesV
+
+The four functions `namesF`, `namesNA`, `namesT`, and `namesV` are variations on a theme. They act on a vector and provide the names of elements that match particular values. 
+
+Consider a named vector with boolean values
+
+```{r}
+foo.boolean = setNames((1:10)%%2==0, letters[1:10])
+foo.boolean
+```
+
+If we want to know which of letters is associated with a true value, we can match the pattern and fetch the names.
+
+```{r}
+names(foo.boolean)[foo.boolean==TRUE]
+```
+
+With the `namesT` function, we can instead write
+
+```{r}
+namesT(foo.boolean)
+```
+
+Note how we avoid writing the vector twice! The function `namesF` behaves similarly but returns the names of elements that are marked as false. 
+
+Consider now that the vector contains numbers or strings.
+
+```{r}
+foo.integer = setNames(c(2,4,NA,0,-1,3,NA,7,3,NA), LETTERS[1:10])
+foo.integer
+```
+
+Suppose we want to know the names that match a certain value, say 3. Finding these is not hard, but it is important to handle NAs carefully. 
+
+```{r}
+names(foo.integer)[foo.integer==3]
+names(foo.integer)[foo.integer %in% 3]
+```
+
+The function `namesV` provides the latter implementation with a simple syntax.
+
+```{r}
+namesV(foo.integer, 3)
+```
+
+Finally, `namesNA` provides element names that hold NAs.
+
+```{r}
+names(foo.integer)[is.na(foo.integer)]
+namesNA(foo.integer)
+```
+
+
+
+
+
+
+&nbsp;
 ## newv
 
 `newv` creates a new vector of specified length, possibly containing names. 
@@ -101,14 +159,13 @@ Note that the length of the output object is determined by the names.
 
 
 
-
 &nbsp;
 ## p0
 
 `p0` is equivalent to `paste0`. It concatenates its input without adding any spaces or other characters.
 
 ```{r}
-paste0(greek)
-p0(greek)
+paste0(greek[1], greek[2])
+p0(greek[1], greek[2])
 ```
 
