more on cache, added function today()

--- a/vignettes/utils.Rmd
+++ b/vignettes/utils.Rmd
@@ -187,6 +187,18 @@ p0(greek[1], greek[2])
 
 
 &nbsp;
+## today
+
+`today` returns a current date in a compact character string. 
+
+```{r}
+today()
+```
+
+
+
+
+&nbsp;
 ## x2df
 
 `x2df` is a conversion function that coerces an input object into a data frame. It is shorthand notations for calls to `data.frame`. For example, let's start with a matrix of characters.
