--- a/vignettes/utils.Rmd
+++ b/vignettes/utils.Rmd
@@ -72,6 +72,20 @@ grepv("a[lm]", greek)
 
 
 &nbsp;
+## h1, h2, h3
+
+These three functions are wrappers for `head` with preset values for `n`. For example
+
+```{r}
+h1(letters)
+h2(letters)
+h3(letters)
+```
+
+
+
+
+&nbsp;
 ## lenu
 
 `lenu` is equivalent to `unique` followed by `length`. It returns the
