--- a/vignettes/cache.Rmd
+++ b/vignettes/cache.Rmd
@@ -14,17 +14,17 @@ library(shrt)
 &nbsp;
 ## Setting up a disk cache
 
-A disk cache is a location on disk that holds computed objects so that they can be retrieved without requiring recomputing from scratch. The default location of the cache is the working directory and can be retrieved busing the function`cache()` without arguments,
+A disk cache is a location on disk that holds computed objects so that they can be retrieved without requiring recomputing from scratch. The default location of the cache is the working directory and can be retrieved busing the function`cachedir()` without arguments,
 
 ```{r}
-cache()
+cachedir()
 ```
 
 Adding an argument sets up a new directory
 
 ```{r}
-cache("cachedata")
-cache()
+cachedir("cachedata")
+cachedir()
 ```
 
 
