added function cacheprefix

--- a/vignettes/cache.Rmd
+++ b/vignettes/cache.Rmd
@@ -27,6 +27,20 @@ cachedir("cachedata")
 cachedir()
 ```
 
+It is also possible to include a prefix to each file of the cache directory.
+
+```{r}
+cacheprefix("testing")
+cacheprefix()
+```
+
+To stop using the prefix, set it to the empty string.
+
+```{r}
+cacheprefix("")
+cacheprefix()
+```
+
 
 
 
