update to cache vignette, misc

--- a/vignettes/cache.Rmd
+++ b/vignettes/cache.Rmd
@@ -169,6 +169,31 @@ rev5
 
 
 
+&nbsp;
+## Logging
+
+By default, function `assignc` does not produce any log messages. Thus, the following snippet is silent.
+
+```{r}
+abc = 5
+assignc("abc")
+```
+
+It is possible to activate messages by setting a verbosity level greater than 1.
+
+```{r}
+verbose = 2
+assignc("abc")
+```
+
+Turning off logging is achieved by resetting verbosity.
+
+```{r}
+verbose = FALSE
+assignc("abc")
+```
+
+
 
 &nbsp;
 ## Notes
