--- a/vignettes/utils.Rmd
+++ b/vignettes/utils.Rmd
@@ -84,6 +84,19 @@ h3(letters)
 
 
 
+&nbsp;
+## lengrep
+
+`lengrep` is equivalent to `grep` followed by `length`. It returns the number
+of hits in a grep query.
+
+```{r}
+items = c("foo1", "foo2", "bar")
+lengrep("foo", items)
+```
+
+
+
 
 &nbsp;
 ## lenu
