--- a/vignettes/data.Rmd
+++ b/vignettes/data.Rmd
@@ -1,4 +1,11 @@
-# `shrt`: data-related functions
+---
+title: Data
+vignette: >
+  %\VignetteEngine{knitr::rmarkdown}
+  %\VignetteIndexEntry{Data}
+  %\usepackage[UTF-8]{inputenc}
+---
+
 
 This vignette demonstrates functions in the `data` range.
 
@@ -9,7 +16,6 @@ library(shrt)
 
 
 
-&nbsp;
 ## setsummary
 
 `setsummary` computes an overview of set membership. It takes two vectors that represent sets of objects. It outputs a list with summary statistics: the set of private members in each of the two inputs, the set of common objects, and a vector with the element counts. 
